fix: perfectly align experience pill background by applying styles directly to text block

--- a/pub/css/style-main.css
+++ b/pub/css/style-main.css
@@ -2614,29 +2614,18 @@ nav ul li a {
 }
 
 .experience-number-wrapper {
-  position: relative;
-  display: inline-block;
-  margin-bottom: 5px;
-}
-
-.experience-highlight-shape {
-  position: absolute;
-  top: -5px;
-  left: -15px;
-  right: -15px;
-  bottom: 5px;
-  background-color: #eef1fc;
-  border-radius: 16px;
-  z-index: 1;
+  margin-bottom: 10px;
 }
 
 .yearsofexperience {
-  position: relative;
-  z-index: 2;
+  display: inline-block;
   font-size: 90px;
   font-weight: 800;
   color: #1a1a1a;
   line-height: 1;
+  background-color: #eef1fc;
+  padding: 5px 25px;
+  border-radius: 24px;
 }
 
 .experience-text {
